fix cat wrap

--- a/styles.css
+++ b/styles.css
@@ -117,16 +117,11 @@ button:hover {
     border-radius: 10px;
 }
 
-.container-descriptions {
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-}
-
 .description {
     display: flex;
     flex-direction: column;
     width: 150px;
+    padding-top: 10px;
 }
 
 .small-title {
@@ -134,3 +129,9 @@ button:hover {
     display: flex;
     justify-content: center;
 }
+
+.container-box{
+    display: flex;
+    flex-wrap: wrap;
+}
+
